update sdk listen payment

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,21 +1,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="vn.thanhpt.simple_paypal">
     <uses-permission android:name="android.permission.INTERNET"/>
-    <application>
+<!--    <application>-->
 
-        <activity android:name=".MyPaymentsActivity"
-            android:exported="true"
-            android:launchMode="singleTop">
+<!--        <activity android:name=".MyPaymentsActivity"-->
+<!--            android:exported="true"-->
+<!--            android:launchMode="singleTop">-->
 
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <data android:scheme="simple_paypal" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-            </intent-filter>
-        </activity>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.VIEW" />-->
+<!--                <data android:scheme="vn.thanhpt.simple_paypal" />-->
+<!--                <category android:name="android.intent.category.DEFAULT" />-->
+<!--                <category android:name="android.intent.category.BROWSABLE" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
 
-    </application>
+<!--    </application>-->
 
 </manifest>
